# zebra

./: Cargo.toml  deny.toml
.github/workflows/: cd.yml  ci.yml  coverage.yml  docs.yml  lint.yml  test.yml  zcash-params.yml  zcashd-manual-deploy.yml
grafana/: network_health.json  network_messages.json
now-or-later/: Cargo.toml
tower-batch/: Cargo.toml
tower-batch/src/: worker.rs
tower-fallback/: Cargo.toml
zebra-chain/: Cargo.toml
zebra-chain/src/: amount.rs  best_tip_height.rs  chain_tip.rs  history_tree.rs  transaction.rs  transparent.rs
zebra-chain/src/orchard/: address.rs  keys.rs  sinsemilla.rs  tree.rs
zebra-cli/src/: config.rs
zebra-consensus/: Cargo.toml
zebra-consensus/src/: block.rs  chain.rs  error.rs  script.rs  transaction.rs
zebra-network/: Cargo.toml
zebra-network/src/: address_book.rs  constants.rs  discoverer.rs  isolated.rs  lib.rs  meta_addr.rs  peer.rs  peer_set.rs
zebra-rpc/src/: methods.rs
zebra-script/: Cargo.toml
zebra-script/src/: lib.rs
zebra-services/: Cargo.toml
zebra-services/src/: lib.rs  mempool.rs  sync.rs
zebra-services/src/mempool/: crawler.rs  downloads.rs  gossip.rs  queue_checker.rs
zebra-services/src/sync/: downloads.rs  gossip.rs  recent_sync_lengths.rs
zebra-state/: Cargo.toml
zebra-state/src/: arbitrary.rs  best_tip_height_receiver.rs  lib.rs  service.rs
zebra-test/: Cargo.toml
zebra-test/src/: lib.rs  mock_service.rs  service_extensions.rs
zebra-utils/: Cargo.toml
zebrad/: Cargo.toml
zebrad/src/: components.rs  lib.rs  utils.rs
zebrad/tests/: acceptance.rs
(+97 files in other folders)
