[package]
name = "zebra-services"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
license = "MIT OR Apache-2.0"
version = "1.0.0-beta.5"
edition = "2021"
repository = "https://github.com/ZcashFoundation/zebra"

[dependencies]
zebra-chain = { path = "../zebra-chain" }
zebra-consensus = { path = "../zebra-consensus" }
zebra-network = { path = "../zebra-network" }
zebra-state = { path = "../zebra-state" }

color-eyre = { version = "0.5.11", features = ["issue-url"] }
futures = "0.3.21"
indexmap = "1.8.0"
metrics = "0.17.1"
pin-project = "1.0.7"
rand = "0.8.5"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1.0.30"
tokio = "1.16.1"
tower = "0.4.12"
tracing = "0.1.31"
tracing-futures = "0.2.5"
